[main] train update: including VGG16 network

--- a/networks.ipynb
+++ b/networks.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "virgin-transaction",
+   "execution_count": 12,
+   "id": "banner-values",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import *\n",
+    "from tensorflow.keras.models import Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "forty-palace",
+   "execution_count": 2,
+   "id": "interim-thumb",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +24,7 @@
        "''"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "undefined-dallas",
+   "execution_count": 3,
+   "id": "tight-zealand",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-5-17bb7203622b>:1: is_gpu_available (from tensorflow.python.framework.test_util) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-3-17bb7203622b>:1: is_gpu_available (from tensorflow.python.framework.test_util) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use `tf.config.list_physical_devices('GPU')` instead.\n"
      ]
@@ -52,7 +54,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "waiting-sunday",
+   "execution_count": 4,
+   "id": "professional-template",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +75,7 @@
        "[]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,48 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "unavailable-crack",
+   "execution_count": 5,
+   "id": "disturbed-division",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'tensorflow.keras' from '/home/alvaro/anaconda3/envs/tf2/lib/python3.8/site-packages/tensorflow/keras/__init__.py'>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.keras.lay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "orange-intelligence",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels.h5\n",
-      "553467904/553467096 [==============================] - 54s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "VGG16 = tf.keras.applications.VGG16()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "floral-tonight",
+   "execution_count": 6,
+   "id": "cognitive-miracle",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +168,174 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closed-jacksonville",
+   "id": "superior-internship",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = Input(inputShape)\n",
+    "\n",
+    "# define the first set of CONV => RELU => POOL => DROPOUT layers\n",
+    "x = Conv2D(64, (2, 2), padding=\"same\", activation=\"relu\")(inputs)\n",
+    "x = MaxPooling2D(pool_size=(2, 2))(x)\n",
+    "x = Dropout(0.3)(x)\n",
+    "\n",
+    "# second set of CONV => RELU => POOL => DROPOUT layers\n",
+    "x = Conv2D(64, (2, 2), padding=\"same\", activation=\"relu\")(x)\n",
+    "x = MaxPooling2D(pool_size=2)(x)\n",
+    "x = Dropout(0.3)(x)\n",
+    "\n",
+    "# prepare the final outputs\n",
+    "pooledOutput = GlobalAveragePooling2D()(x)\n",
+    "outputs = Dense(embeddingDim)(pooledOutput)\n",
+    "\n",
+    "# build the model\n",
+    "model = Model(inputs, outputs)\n",
+    "\n",
+    "# return the model to the calling function\n",
+    "return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "atmospheric-harmony",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = Input((224,224,3))\n",
+    "\n",
+    "x = Conv2D(64, (3, 3), padding='same', activation='relu')(inputs)\n",
+    "x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "\n",
+    "x = Conv2D(128, (3, 3), padding='same', activation='relu')(x)\n",
+    "x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "\n",
+    "x = Conv2D(256, (3, 3), padding='same', activation='relu')(x)\n",
+    "x = Conv2D(256, (3, 3), padding='same', activation='relu')(x)\n",
+    "x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "\n",
+    "x = Conv2D(512, (3, 3), padding='same', activation='relu')(x)\n",
+    "x = Conv2D(512, (3, 3), padding='same', activation='relu')(x)\n",
+    "x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "\n",
+    "x = Conv2D(512, (3, 3), padding='same', activation='relu')(x)\n",
+    "x = Conv2D(512, (3, 3), padding='same', activation='relu')(x)\n",
+    "x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "\n",
+    "x = Flatten()(x)\n",
+    "x = Dense(4096, activation='relu')(x)\n",
+    "x = Dense(4096, activation='relu')(x)\n",
+    "output = Dense(128, activation='linear')(x)\n",
+    "\n",
+    "model = Model(inputs, output, name='VGG16_confA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "south-nitrogen",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"VGG16_confA\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_11 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_65 (Conv2D)           (None, 224, 224, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_40 (MaxPooling (None, 112, 112, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_66 (Conv2D)           (None, 112, 112, 128)     73856     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_41 (MaxPooling (None, 56, 56, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_67 (Conv2D)           (None, 56, 56, 256)       295168    \n",
+      "_________________________________________________________________\n",
+      "conv2d_68 (Conv2D)           (None, 56, 56, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_42 (MaxPooling (None, 28, 28, 256)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_69 (Conv2D)           (None, 28, 28, 512)       1180160   \n",
+      "_________________________________________________________________\n",
+      "conv2d_70 (Conv2D)           (None, 28, 28, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_43 (MaxPooling (None, 14, 14, 512)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_71 (Conv2D)           (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "conv2d_72 (Conv2D)           (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_44 (MaxPooling (None, 7, 7, 512)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_4 (Flatten)          (None, 25088)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_21 (Dense)             (None, 4096)              102764544 \n",
+      "_________________________________________________________________\n",
+      "dense_22 (Dense)             (None, 4096)              16781312  \n",
+      "_________________________________________________________________\n",
+      "dense_23 (Dense)             (None, 128)               524416    \n",
+      "=================================================================\n",
+      "Total params: 129,290,752\n",
+      "Trainable params: 129,290,752\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "subtle-racing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "letter = 'A'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "alternate-wallace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "letter2 = 'B'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "introductory-salon",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letter < letter2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "preceding-security",
    "metadata": {},
    "outputs": [],
    "source": []
