python classification training

--- a/networks.ipynb
+++ b/networks.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "banner-values",
+   "execution_count": 1,
+   "id": "increased-investor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "interim-thumb",
+   "id": "grave-collectible",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "tight-zealand",
+   "id": "civil-enzyme",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "professional-template",
+   "id": "automated-screening",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "disturbed-division",
+   "id": "conventional-reproduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cognitive-miracle",
+   "id": "fifteen-rwanda",
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "superior-internship",
+   "execution_count": 2,
+   "id": "statutory-advocate",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'inputShape' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-d1cdfe2f345d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputShape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# define the first set of CONV => RELU => POOL => DROPOUT layers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mConv2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"same\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"relu\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpool_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'inputShape' is not defined"
+     ]
+    }
+   ],
    "source": [
     "inputs = Input(inputShape)\n",
     "\n",
@@ -197,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "atmospheric-harmony",
+   "execution_count": 5,
+   "id": "matched-hepatitis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,8 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "south-nitrogen",
+   "execution_count": 6,
+   "id": "associate-trader",
    "metadata": {},
    "outputs": [
     {
@@ -244,44 +256,38 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_11 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "input_2 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
-      "conv2d_65 (Conv2D)           (None, 224, 224, 64)      1792      \n",
+      "conv2d_8 (Conv2D)            (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_40 (MaxPooling (None, 112, 112, 64)      0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 112, 112, 64)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_66 (Conv2D)           (None, 112, 112, 128)     73856     \n",
+      "conv2d_9 (Conv2D)            (None, 112, 112, 128)     73856     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_41 (MaxPooling (None, 56, 56, 128)       0         \n",
+      "max_pooling2d_6 (MaxPooling2 (None, 56, 56, 128)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_67 (Conv2D)           (None, 56, 56, 256)       295168    \n",
+      "conv2d_10 (Conv2D)           (None, 56, 56, 256)       295168    \n",
       "_________________________________________________________________\n",
-      "conv2d_68 (Conv2D)           (None, 56, 56, 256)       590080    \n",
+      "conv2d_11 (Conv2D)           (None, 56, 56, 256)       590080    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_42 (MaxPooling (None, 28, 28, 256)       0         \n",
+      "max_pooling2d_7 (MaxPooling2 (None, 28, 28, 256)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_69 (Conv2D)           (None, 28, 28, 512)       1180160   \n",
+      "conv2d_12 (Conv2D)           (None, 28, 28, 512)       1180160   \n",
       "_________________________________________________________________\n",
-      "conv2d_70 (Conv2D)           (None, 28, 28, 512)       2359808   \n",
+      "conv2d_13 (Conv2D)           (None, 28, 28, 512)       2359808   \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_43 (MaxPooling (None, 14, 14, 512)       0         \n",
+      "max_pooling2d_8 (MaxPooling2 (None, 14, 14, 512)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_71 (Conv2D)           (None, 14, 14, 512)       2359808   \n",
+      "flatten_1 (Flatten)          (None, 100352)            0         \n",
       "_________________________________________________________________\n",
-      "conv2d_72 (Conv2D)           (None, 14, 14, 512)       2359808   \n",
+      "dense_3 (Dense)              (None, 4096)              411045888 \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_44 (MaxPooling (None, 7, 7, 512)         0         \n",
+      "dense_4 (Dense)              (None, 4096)              16781312  \n",
       "_________________________________________________________________\n",
-      "flatten_4 (Flatten)          (None, 25088)             0         \n",
-      "_________________________________________________________________\n",
-      "dense_21 (Dense)             (None, 4096)              102764544 \n",
-      "_________________________________________________________________\n",
-      "dense_22 (Dense)             (None, 4096)              16781312  \n",
-      "_________________________________________________________________\n",
-      "dense_23 (Dense)             (None, 128)               524416    \n",
+      "dense_5 (Dense)              (None, 128)               524416    \n",
       "=================================================================\n",
-      "Total params: 129,290,752\n",
-      "Trainable params: 129,290,752\n",
+      "Total params: 432,852,480\n",
+      "Trainable params: 432,852,480\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -294,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "subtle-racing",
+   "id": "decimal-calculation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "alternate-wallace",
+   "id": "above-polyester",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "introductory-salon",
+   "id": "solar-library",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-security",
+   "id": "exciting-agriculture",
    "metadata": {},
    "outputs": [],
    "source": []
