--- a/networks.ipynb
+++ b/networks.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "increased-investor",
+   "id": "opened-teacher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "grave-collectible",
+   "id": "protected-senior",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "''"
+       "'/device:GPU:0'"
       ]
      },
      "execution_count": 2,
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "civil-enzyme",
+   "id": "stretch-press",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 3,
@@ -66,13 +66,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "automated-screening",
+   "id": "superb-toronto",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
      },
      "execution_count": 4,
@@ -86,8 +86,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "conventional-reproduction",
+   "execution_count": 7,
+   "id": "sized-harvey",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo $CUDA_VISIBLE_DEVICES "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "funky-rhythm",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fifteen-rwanda",
+   "execution_count": 9,
+   "id": "progressive-novel",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "statutory-advocate",
+   "id": "attended-trade",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "matched-hepatitis",
+   "id": "bacterial-creation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "associate-trader",
+   "id": "approximate-german",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "decimal-calculation",
+   "id": "burning-purse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "above-polyester",
+   "id": "entitled-moment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "solar-library",
+   "id": "demonstrated-alignment",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exciting-agriculture",
+   "id": "stock-spare",
    "metadata": {},
    "outputs": [],
    "source": []
