SVM training added

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "british-wisconsin",
+   "execution_count": 33,
+   "id": "earlier-coordination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,203 +12,183 @@
     "import os\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from utils import *\n",
-    "from tensorflow.keras.layers import Input, Dense\n",
-    "import datetime"
+    "from tensorflow.keras.layers import Input, Dense, Flatten, Concatenate, Subtract\n",
+    "import datetime\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# os.environ['TF_CPP_MIN_LOG_LEVEL'] = '1'\n",
+    "\n",
+    "n_classes = 196\n",
+    "n_elements = 300\n",
+    "\n",
+    "\n",
+    "\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "try:\n",
+    "    for gpu in gpus:\n",
+    "        tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "except RuntimeError as e:\n",
+    "    print(e)\n",
+    "\n",
+    "\n",
+    "ROOT_DIR = get_git_root(os.getcwd())\n",
+    "\n",
+    "\n",
+    "car_names = os.listdir(os.path.join(ROOT_DIR, 'dataset'))\n",
+    "labels = random.sample(car_names, k = n_classes)\n",
+    "\n",
+    "(trainX, trainY), (testX, testY), (trainX_bbox, testX_bbox) = load_dataset(ROOT_DIR, labels, n_elements, img_resolution=(224,224),\n",
+    "                                                                                 crop=True, greyscale=False, random_sample = False)\n",
+    "trainX = np.asarray(trainX)\n",
+    "trainY = np.asarray(trainY)\n",
+    "testX = np.asarray(testX)\n",
+    "testY = np.asarray(testY)\n",
+    "\n",
+    "trainX = np.expand_dims(trainX, axis=-1)\n",
+    "testX = np.expand_dims(testX, axis=-1)\n",
+    "norm_trainY = normalize_labels(trainY)\n",
+    "norm_testY = normalize_labels(testY)\n",
+    "\n",
+    "input_shape = trainX.shape[1:4]\n",
+    "\n",
+    "\n",
+    "(trainX, trainY) = make_pairs(trainX, norm_trainY)\n",
+    "(testX, testY) = make_pairs(testX, norm_testY)\n",
+    "trainX = [trainX[:, 0], trainX[:, 1]]\n",
+    "testX = [testX[:, 0], testX[:, 1]]\n",
+    "\n",
+    "\n",
+    "\n",
+    "model = tf.keras.applications.VGG16(include_top=False, weights='imagenet',\n",
+    "                            input_shape=input_shape, pooling='max')\n",
+    "for each_layer in model.layers:\n",
+    "    each_layer.trainable = False\n",
+    "\n",
+    "\n",
+    "inputA = Input(shape=input_shape)\n",
+    "inputB = Input(shape=input_shape)\n",
+    "featsA = model(inputA)\n",
+    "featsB = model(inputB)\n",
+    "# distance = Lambda(utils.euclidean_distance)([featsA, featsB])\n",
+    "# feats = Concatenate()([featsA, featsB])\n",
+    "feats = Subtract()([featsA, featsB])\n",
+    "# feats = Dense(4096, activation='relu', name='Dense_1')(feats)\n",
+    "# output = Dense(4096, activation='relu', name='Dense_2')(feats)\n",
+    "# output = Dense(1, activation=\"sigmoid\")(output)\n",
+    "model = tf.keras.models.Model([inputA, inputB], feats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "flexible-property",
+   "execution_count": 34,
+   "id": "innovative-pierre",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vgg16 = tf.keras.applications.VGG16()"
+    "trainX_emb = model.predict(trainX)\n",
+    "testX_emb = model.predict(testX)\n",
+    "trainY = np.squeeze(trainY, 1)\n",
+    "testY = np.squeeze(testY, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "contained-staff",
+   "execution_count": 35,
+   "id": "arctic-interim",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile()\n",
+    "svm_model = SVC(kernel='rbf', verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "measured-repeat",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"vgg16\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
-      "_________________________________________________________________\n",
-      "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
-      "_________________________________________________________________\n",
-      "block1_conv2 (Conv2D)        (None, 224, 224, 64)      36928     \n",
-      "_________________________________________________________________\n",
-      "block1_pool (MaxPooling2D)   (None, 112, 112, 64)      0         \n",
-      "_________________________________________________________________\n",
-      "block2_conv1 (Conv2D)        (None, 112, 112, 128)     73856     \n",
-      "_________________________________________________________________\n",
-      "block2_conv2 (Conv2D)        (None, 112, 112, 128)     147584    \n",
-      "_________________________________________________________________\n",
-      "block2_pool (MaxPooling2D)   (None, 56, 56, 128)       0         \n",
-      "_________________________________________________________________\n",
-      "block3_conv1 (Conv2D)        (None, 56, 56, 256)       295168    \n",
-      "_________________________________________________________________\n",
-      "block3_conv2 (Conv2D)        (None, 56, 56, 256)       590080    \n",
-      "_________________________________________________________________\n",
-      "block3_conv3 (Conv2D)        (None, 56, 56, 256)       590080    \n",
-      "_________________________________________________________________\n",
-      "block3_pool (MaxPooling2D)   (None, 28, 28, 256)       0         \n",
-      "_________________________________________________________________\n",
-      "block4_conv1 (Conv2D)        (None, 28, 28, 512)       1180160   \n",
-      "_________________________________________________________________\n",
-      "block4_conv2 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_conv3 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_pool (MaxPooling2D)   (None, 14, 14, 512)       0         \n",
-      "_________________________________________________________________\n",
-      "block5_conv1 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv2 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv3 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 25088)             0         \n",
-      "_________________________________________________________________\n",
-      "fc1 (Dense)                  (None, 4096)              102764544 \n",
-      "_________________________________________________________________\n",
-      "fc2 (Dense)                  (None, 4096)              16781312  \n",
-      "_________________________________________________________________\n",
-      "predictions (Dense)          (None, 1000)              4097000   \n",
-      "=================================================================\n",
-      "Total params: 138,357,544\n",
-      "Trainable params: 138,357,544\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "[LibSVM]"
      ]
-    }
-   ],
-   "source": [
-    "vgg16.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "brief-programmer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = vgg16.output\n",
-    "x = Flatten(name='Flatten_1')(x)\n",
-    "x = Dense(4096, activation='relu', name='Dense_1')(x)\n",
-    "x = Dense(4096, activation='relu', name='Dense_2')(x)\n",
-    "output = Dense(196, name='Dense_3')(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "hybrid-ozone",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_7\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_8 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
-      "_________________________________________________________________\n",
-      "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
-      "_________________________________________________________________\n",
-      "block1_conv2 (Conv2D)        (None, 224, 224, 64)      36928     \n",
-      "_________________________________________________________________\n",
-      "block1_pool (MaxPooling2D)   (None, 112, 112, 64)      0         \n",
-      "_________________________________________________________________\n",
-      "block2_conv1 (Conv2D)        (None, 112, 112, 128)     73856     \n",
-      "_________________________________________________________________\n",
-      "block2_conv2 (Conv2D)        (None, 112, 112, 128)     147584    \n",
-      "_________________________________________________________________\n",
-      "block2_pool (MaxPooling2D)   (None, 56, 56, 128)       0         \n",
-      "_________________________________________________________________\n",
-      "block3_conv1 (Conv2D)        (None, 56, 56, 256)       295168    \n",
-      "_________________________________________________________________\n",
-      "block3_conv2 (Conv2D)        (None, 56, 56, 256)       590080    \n",
-      "_________________________________________________________________\n",
-      "block3_conv3 (Conv2D)        (None, 56, 56, 256)       590080    \n",
-      "_________________________________________________________________\n",
-      "block3_pool (MaxPooling2D)   (None, 28, 28, 256)       0         \n",
-      "_________________________________________________________________\n",
-      "block4_conv1 (Conv2D)        (None, 28, 28, 512)       1180160   \n",
-      "_________________________________________________________________\n",
-      "block4_conv2 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_conv3 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_pool (MaxPooling2D)   (None, 14, 14, 512)       0         \n",
-      "_________________________________________________________________\n",
-      "block5_conv1 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv2 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv3 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
-      "_________________________________________________________________\n",
-      "Flatten_1 (Flatten)          (None, 25088)             0         \n",
-      "_________________________________________________________________\n",
-      "Dense_1 (Dense)              (None, 4096)              102764544 \n",
-      "_________________________________________________________________\n",
-      "Dense_2 (Dense)              (None, 4096)              16781312  \n",
-      "_________________________________________________________________\n",
-      "Dense_3 (Dense)              (None, 196)               803012    \n",
-      "=================================================================\n",
-      "Total params: 135,063,556\n",
-      "Trainable params: 120,348,868\n",
-      "Non-trainable params: 14,714,688\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "vgg16 = tf.keras.models.Model(vgg16.input, output)\n",
-    "vgg16.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "spoken-provision",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "True"
+       "SVC(verbose=True)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vgg16.layers[-1].trainable"
+    "svm_model.fit(trainX_emb, trainY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "developed-antique",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9116169932488062\n",
+      "0.7354543203763307\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainY_preds = svm_model.predict(trainX_emb)\n",
+    "testY_preds = svm_model.predict(testX_emb)\n",
+    "print(accuracy_score(trainY_preds, trainY))\n",
+    "print(accuracy_score(testY_preds, testY))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "covered-chase",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('svm_rbf.pickle', 'wb') as file:\n",
+    "    pickle.dump(svm_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "painted-substitute",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/alvaro/Vehicle-Model-Recognition/dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "random-disabled",
+   "id": "increasing-scheme",
    "metadata": {},
    "outputs": [],
    "source": []
